# calibrx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: export-format.md  release.md
src/calibrx/: __init__.py  __main__.py  _opencv.py  calibration.py  cli.py  exceptions.py  undistort.py
src/camcal_sdk/: __init__.py  calibration.py  cli.py  undistort.py
tests/: test_calibration.py  test_undistort.py
