[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "calibrx"
version = "0.1.0"
description = "Python SDK for applying CalibrX calibration exports to undistort images."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "CalibrX" }
]
keywords = [
  "camera-calibration",
  "computer-vision",
  "opencv",
  "undistortion",
  "fisheye",
  "pinhole"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5"
]

[project.scripts]
calibrx = "calibrx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calibrx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
